新增分类：site-development

--- a/blog/tags.yml
+++ b/blog/tags.yml
@@ -17,3 +17,8 @@ hola:
   label: Hola
   permalink: /hola
   description: Hola tag description
+
+site-development:
+  label: site-development
+  permalink: /site-development
+  description: site development posts
